# PyTrinamic

./: .buildinfo  .gitignore  .project  .prospector.yaml  .pydevproject  CCBL.txt  LICENSE  MANIFEST.in  README.md  Readme.txt  genindex.html  index.html  objects.inv  pylint  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  user_guide.html
.github/workflows/: manual-test.yml  mypy.yml  push-test.yml  python-publish.yml  static.yml  update_pages.yml
PyTrinamic/: MotorManager.py  SerialInterface.py  Strings.py  TMCL.py  __init__.py  cli.py  helpers.py  motor.py  version.py
PyTrinamic/connections/: CANopenInterface.py  CANopen_interface.py  ConnectionInterface.py  ConnectionManager.py  ConnectionManagerPC.py  SerialInterface.py  TmclInterface.py  UsbTmclInterface.py  connection_interface.py  dummy_interface.py  dummy_tmcl_interface.py  (+12 more)
_sources/: index.md.txt  user_guide.md.txt
doc/: conversion_guide.md  evalboards.md  ics.md  modules.md  overview.md
docs/: conversion_guide.md  datalogger.md  evalboards.md  ics.md  migration_guide.md  modules.md
examples/: PrintModuleVersion.py  TMCM-0010-OPC_config_check.py  TMCM-0010-OPC_config_update.py
pytrinamic/: RAMDebug.py  TMCL.py  __init__.py  datalogger.py  helpers.py  python  rd.py  tmcl.py  version.py
pytrinamic2/: __init__.py  helpers.py
tests/: check_lb_fw_upload.py  test_can_adapters.py  test_datalogger_tmc4671_eval.py  test_datalogger_tmcm_1617.py  test_firmware_update.py  test_interface_timeouts.py  test_project_sanity.py  test_socket_tmcl_interface.py  test_tmcl_interface.py
(+1471 files in other folders)
